# RMPCDMD

./: .gitignore  .gitmodules  .travis.yml  CITATION  CMakeLists.txt  LICENSE  README.md  logbook.org  notes.org
cmake/: FindGit.cmake  FindHDF5_Fortran.cmake  compiler.cmake  version.cmake
doc/: .gitignore  Makefile  README.md  algorithms.rst  bibtex.bib  conf.py  contents.rst  design.rst  doxygen_conf  index.md  index.rst  install.rst  programs.rst  run.rst  tutorial.rst  zbibliography.rst
doc/algorithms/: quaternions.rst
doc/sphinxext_doxygen/: doxytag.py
examples/: sample_MPCD  sample_MPCD.peter_drift  sample_MPCDMD  sample_MPCDMD.LJclustering36  sample_MPCDMD.group1  sample_MPCDMD_1  sample_MPCDMD_2  sample_MPCDMD_3  sample_MPCDMD_36  sample_MPCDMD_DIF_CLUSTER  sample_MPCDMD_MOV_CLUSTER  sample_MPCDMD_elast_from_file  sample_MPCDMD_lat
experiments/: .gitignore  Makefile  README.md
experiments/01-single-dimer/: Makefile  dimer.parameters  plot_histogram.py  plot_msd.py  plot_velocity.py  ruckner-kapral.parameters  view_last_simulation_frame.py
experiments/02-chemotactic-cell/: Makefile  chemo_cell.parameters  fit_poiseuille.py  time_rhoxy.py
experiments/03-single-janus/: Makefile  janus.parameters  janus_parameters.py  janus_structure.h5  l.parameters  lshape_5x8_step1.h5  lshape_nx6_ny9_xy.h5  lshape_thick.h5  plot_planar.py  plot_polar.py  plot_species_evolution.py  plot_velocity.py  rotation_analysis.py  view_last_simulation_frame.py
experiments/04-single-dimer-channel-flow/: Makefile  channel_flow.parameters
experiments/2015-single-dimer/: Makefile  dimer.parameters
experiments/2016-chemotactic-cell/: chemo_cell.parameters
programs/: chemotactic_cell.f90  n_colloids_pbc.f90  poiseuille_flow.f90  single_body.f90  single_body_thermal.f90  single_dimer.f90  single_dimer_channel_flow.f90  single_dimer_chemotactic_cell.f90  single_dimer_pbc.f90  single_janus_pbc.f90  single_sphere_thermo_trap.f90  three_bead_enzyme.f90
py/: disp_at.py  disp_v_xyz.py  disp_xyz.py
scripts/: compare_params.py  compute_v_autoc.py  disp_at.py  disp_en_MPCDMD.py  disp_obs.py  download_and_build_hdf5.sh  doxy_conf  h5md_plot.py  make_tarball.sh  mpcd_values.py  plot_blocks.py  plot_msd.py  rmpcdmd.in  run_tmpdir.sh  seeder.sh  timers_plot.py  write_license_header.sh
src/: LJ.f90  MD.f90  MPCD.f90  MPCDMD.f90  MPCDMD_version.h.in  cell_system.f90  common.f90  correlator.f90  group.f90  hilbert.f90  interaction.f90  md.f90  mpcd.f90  neighbor_list.f90  particle_system.f90  particle_system_io.f90  planar_fields.f90  polar_dist.f90  polar_fields.f90  radial_dist.f90  reaction.f90  rmpcdmd_module.f90  rmpcdmd_module.f90.in  sys.f90  volume_reaction.f90
test/: MPCDMD_test.f90  MPCD_test.f90  dimer_test.parameters  dimer_test.py  setup_bulk_decay.f90  setup_flow.f90  setup_flow_inoutlet.f90  setup_simple_colloids.f90  setup_simple_fluid.f90  setup_simple_rattle.f90  setup_single_catalytic_fixed_sphere.f90  setup_single_colloid.f90  setup_single_dimer.f90  setup_thermal_fluid.f90  test_cell_system_0.f90  test_common_0.f90  test_common_1.f90  test_correlator_0.f90  test_elastic_network_0.f90  test_group.f90  test_md_0.f90  test_neighbor_list_0.f90  test_neighbor_list_1.f90  test_particle_system_0.f90  tester.f90  try_all.f90
